--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,9 @@ body{
   font-size: 60px;
   text-transform: uppercase;
 }
+.logo {
+  width: 500px;
+}
 .pannel {
   list-style: none;
   padding: 0;
